[package]
name = "tg-userbot"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "signal"] }
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
rand = "0.8"
rpassword = "6.0"
