[package]
name = "tg-userbot"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["signal", "rt", "macros"] }
grammers-client = { git = "https://github.com/Lonami/grammers", features = [
    "markdown",
] }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
log = "0.4"
simple_logger = { version = "2.1", features = ["threads", "nightly"] }
dotenv = "0.15"
async-trait = "0.1"
rand = "0.8"
rpassword = "6.0"
